--- a/extensions/Core.Dashboard/web/pages/LoginPage/style.css
+++ b/extensions/Core.Dashboard/web/pages/LoginPage/style.css
@@ -48,6 +48,12 @@
                     @apply bg-green-400/80 text-white;
                 }
             }
+
+            .error-alert {
+                @apply block w-full;
+                @apply py-1 px-2;
+                @apply bg-red-600/50 text-white;
+            }
         }
     }
 }
