--- a/extensions/Core.Dashboard/web/style.css
+++ b/extensions/Core.Dashboard/web/style.css
@@ -29,7 +29,7 @@
 
         & > #dashboard-content {
             @apply w-full h-full;
-            @apply flex gap-2;
+            @apply flex;
             @apply text-white;
         }
     }
