--- a/extensions/Core.Dashboard/web/components/Sidebar/style.css
+++ b/extensions/Core.Dashboard/web/components/Sidebar/style.css
@@ -12,8 +12,13 @@
 
         & button {
             @apply w-full px-4 py-2 rounded-lg;
-            @apply bg-black/40 hover:bg-black/60;
+            @apply bg-black/40 hover:bg-violet-600/60;
+            @apply border border-slate-600;
             @apply flex justify-between;
+
+            &.active {
+                @apply bg-violet-600/70;
+            }
         }
     }
 }
